# gdevsim

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: _config.yml
docs/examples/optoelectronic/: detector.py  modulator.py
docs/models/: high_field_mobility.py  insulators.py  low_field_mobility.py  metals.py  recombination.py  semiconductors.py
gdevsim/: __init__.py  config.py  contacts.py  logger.py  ramp.py  simulation.py  visualization.py
gdevsim/doping/: masked_profiles.py  parse_layer_stack_dopings.py  profile_impulses.py
gdevsim/materials/: aluminum.yaml  copper.yaml  germanium.yaml  materials.py  silicon.yaml  silicon_dioxide.yaml  silicon_insulator.yaml  silicon_nitride.yaml
gdevsim/meshing/: get_devsim_from_mesh.py  mesh_convert.py  parse_gmsh.py  refinement.py
gdevsim/models/: assign_models.py  assign_parameters.py  create_models.py  interpolation.py  models.py
gdevsim/ref_data/: arora_silicon.csv  slotboom_silicon.csv
gdevsim/samples/: electronic_technology.py  layer_views_electronic.yaml  layers_photonic.py  optoelectronic.py  passives.py  transistors.py
gdevsim/utils/: get_component_with_effective_layers.py  operations.py
tests/: test_contacts.py
tests/doping/: test_masked_profiles.py  test_profile_impulses.py
tests/doping/test_masked_profiles/: test_masked_implant_profile_uz_gaussian_0_2.0_[(-3, -1), (1, 3)]_1.0_0.1_0.1.yml  test_masked_implant_profile_uz_gaussian_10_2.0_[(-3, -1), (1, 3)]_1.0_0.1_0.1.yml  test_masked_implant_profile_uz_gaussian_5_-1_[(-3, -1), (1, 3)]_1.0_0.1_0.1.yml  test_masked_implant_profile_uz_gaussian_5_0_[(-3, -1), (1, 3)]_1.0_0.1_0.1.yml  test_masked_implant_profile_uz_gaussian_5_2.0_[(-10, -8), (8, 10)]_1.0_0.1_0.1.yml  test_masked_implant_profile_uz_gaussian_5_2.0_[(-3, -1), (1, 3)]_0.5_0.05_0.05.yml  test_masked_implant_profile_uz_gaussian_5_2.0_[(-3, -1), (1, 3)]_1.0_0.1_0.1.yml  test_masked_implant_profile_uz_gaussian_5_2.0_[(-3, -1), (1, 3)]_2.0_0.2_0.2.yml  test_masked_implant_profile_uz_gaussian_5_2.0_[(0, 2)]_1.0_0.1_0.1.yml
tests/doping/test_profile_impulses/: test_constant_impulse_varied_10__5_10_expected_results3_.yml  test_constant_impulse_varied_3__2_1_expected_results2_.yml  test_constant_impulse_varied_5_0_5_expected_results1_.yml  test_constant_impulse_varied_5__1_3_expected_results0_.yml  test_gaussian_impulse_x0_y0_5_1_1_1_expected_results0_.yml  test_gaussian_impulse_x1_y1_5_1_1_1_expected_results1_.yml  test_gaussian_impulse_x2_y2_5_1_1_1_expected_results2_.yml  test_gaussian_impulse_x3_y3_5_1_1_1_expected_results3_.yml  test_skewed_gaussian_impulse_x0_y0_5_1_1_0_1_1_expected_results0_.yml  test_skewed_gaussian_impulse_x2_y2_5_1_1_0_1_1_expected_results2_.yml  test_skewed_gaussian_impulse_x3_y3_5_1_1_0_1_1_expected_results3_.yml
tests/utils/: test_operations.py
